--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -96,7 +96,7 @@
                     </form>
                 </section>
                 <section id="section-2">
-                    <div class="ui segment">
+                    <div class="ui segment" id="video-segment">
                         <div class="ui active inverted dimmer">
                             <div class="ui text loader" id="text-loader">Generating</div>
                             <div id="text-done">
