--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="ui container">
             <header>
-                <h1 class="ui center aligned huge blue header" id="name">Body to Title</h1>
+                <h1 class="ui center aligned huge blue header" id="name">Summarizer</h1>
                 <h3 class="ui center aligned header">Just paste video link or select video file</h3>
             </header>
             <section>
